--- a/public/css/custom-style.css
+++ b/public/css/custom-style.css
@@ -14,7 +14,7 @@
     /*
     background-image: url("../img/hero-1.webp");
     */
-    background-image: linear-gradient(to right, #800, #fff);
+    background-image: linear-gradient(to right, #05a, #fff);
     background-size: stretch;
     background-repeat: no-repeat;
     background-position: top;
