Misc calendar and cms change

--- a/public/css/custom-style.css
+++ b/public/css/custom-style.css
@@ -19,3 +19,7 @@
     background-repeat: no-repeat;
     background-position: top;
 }
+
+.o-btn-success-hover:hover {
+    background-color: blue;
+}
