--- a/public/css/custom-style.css
+++ b/public/css/custom-style.css
@@ -23,3 +23,18 @@
 .o-btn-success-hover:hover {
     background-color: blue;
 }
+
+.o-animated {
+    animation-name: oAnimated;
+    animation-duration: 5s;
+}
+
+@keyframes oAnimated {
+    from {
+        background-color: red;
+    }
+
+    from {
+        background-color: green;
+    }
+}
