--- a/public/css/custom-style.css
+++ b/public/css/custom-style.css
@@ -38,3 +38,35 @@
         background-color: green;
     }
 }
+
+.o-ltr {  
+    animation:move 20s linear infinite;
+}
+.o-ltr:hover {
+animation-play-state:paused;
+-webkit-animation-play-state:paused;
+}
+
+@keyframes move{
+    0% {
+        /*
+        color: white;
+        font-size: 1rem;
+        */
+        margin-left:0%;
+    }
+    50% {
+        /*
+        color: green;
+        font-size: 2rem;
+        */
+    }
+    100% {
+        /*
+        color: white;
+        margin-left:100%;
+        font-size: 2rem;
+        */
+        margin-left:100%;
+    }
+}
