Website UI updates

--- a/public/css/custom-style.css
+++ b/public/css/custom-style.css
@@ -201,3 +201,13 @@ animation-play-state:paused;
 .o-flipper:hover {
     background-color: #ddf;
 }
+
+.lineUnder:before {
+  content : "";
+  position: absolute;
+  left    : 0;
+  bottom  : 0;
+  height  : 1px;
+  width   : 50%;  /* or 100px */
+  border-bottom:1px solid magenta;
+}
