--- a/public/css/custom-style.css
+++ b/public/css/custom-style.css
@@ -238,3 +238,7 @@ animation-play-state:paused;
 .o-border-radius {
     border-radius: 15px;
 }
+.o-linear-gradient {
+    background-image: linear-gradient(to right, #45a, #1e293b);
+    color: white;
+}
