--- a/public/css/custom-style.css
+++ b/public/css/custom-style.css
@@ -247,10 +247,12 @@ animation-play-state:paused;
     border-radius: 8px;
 }
 
+/*
 .o-linear-gradient {
     background-image: linear-gradient(135deg, #45a, #1e293b);
     color: white;
 }
+*/
 
 .o-package-color-darker-text {
     color: #238;
