--- a/public/css/custom-style.css
+++ b/public/css/custom-style.css
@@ -247,6 +247,11 @@ animation-play-state:paused;
     border-radius: 8px;
 }
 
+.o-border-bottom-radius {
+    border-bottom-left-radius: 15px;
+    border-bottom-right-radius: 15px;
+}
+
 /*
 .o-linear-gradient {
     background-image: linear-gradient(135deg, #45a, #1e293b);
@@ -282,4 +287,8 @@ animation-play-state:paused;
     right: 0;
     bottom: 0;
     background: url('data:image/svg+xml,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 100 100"><defs><pattern id="grid" width="10" height="10" patternUnits="userSpaceOnUse"><path d="M 10 0 L 0 0 0 10" fill="none" stroke="%23ffffff" stroke-width="0.5" opacity="0.1"/></pattern></defs><rect width="100" height="100" fill="url(%23grid)"/></svg>');
+}
+
+.o-border-darker-gray {
+    border: 2px solid gray !important;
 }
